# cross-ex-arb-dashboard

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: perf_gates.yml
benchmarks/: perf_after_net_tuning.json  perf_baseline.json  perf_baseline_pre_crate_opts.json  ws_ingest_baseline_post_ws_rollout.json
fixtures/: apex_depth_delta_delete.json  apex_depth_delta_update.json  apex_depth_snapshot.json  apex_instrument_info_funding.json  apex_ws_ping.json  aster_bookticker.json  binance_book_ticker.json  binance_mark_price.json  bybit_ticker_delta_funding.json  bybit_ticker_delta_quote.json  bybit_ticker_snapshot.json  bybit_ticker_subscribe_ack.json  grvt_ticker_ack.json  grvt_ticker_quote_funding.json  grvt_ticker_quote_funding_v2.json  lighter_ticker.json
scripts/: collector_codec_bench.py  perf_capture_baseline.py  perf_regression_check.py  ws_ingest_capture_baseline.py  ws_ingest_regression_check.py
src/: collector.rs  config.rs  discovery.rs  engine.rs  lib.rs  main.rs  model.rs  ui.rs  ws_fast.rs
src/feeds/: apex.rs  aster.rs  binance.rs  bybit.rs  edge_x.rs  extended.rs  grvt.rs  hyperliquid.rs  lighter.rs  mod.rs
tests/: collector.rs  history.rs  integration_mock.rs  parsers.rs  spread.rs  symbols.rs
